Started Linear Algebra notes.

--- a/src/main.tex
+++ b/src/main.tex
@@ -28,21 +28,24 @@
 
 \begin{document}
     \maketitle
+
+    \chapter{Real Analysis} 
+    \input{sections/analysis.tex}
     
     \chapter{Calculus} 
     \input{sections/calculus.tex}
 
-    \chapter{Differential Equation TODO}
-    \input{sections/differential_equation/temp.tex}
+    % \chapter{Differential Equation TODO}
+    % \input{sections/differential_equation/temp.tex}
 
-    \chapter{Finance}
-    \input{sections/finance.tex}
-
-    \chapter{Real Analysis} 
-    \input{sections/analysis.tex}
+    \chapter{Linear Algebra TODO}
+    \input{sections/linear_algebra.tex}
             
     \chapter{Statistics}
     \input{sections/statistics.tex}
+
+    \chapter{Finance}
+    \input{sections/finance.tex}
 
     \chapter{Notations and Tables TODO}
     \input{sections/notations.tex}
