--- a/src/sections/calculus.tex
+++ b/src/sections/calculus.tex
@@ -1,10 +1,10 @@
-\section{Differentiation and Integration}
+\section{Differentiation and Integration TODO}
 \input{sections/calculus/differentiation_integration.tex}
 
 \section{Multiple Integration}
 \input{sections/calculus/multiple_integration.tex}
 
-\section{Multivariable}
+\section{Multivariable TODO}
 \input{sections/calculus/multivariable.tex}
 
 \section{Vector}
