Infinite Series Notes

--- a/src/sections/analysis.tex
+++ b/src/sections/analysis.tex
@@ -19,3 +19,6 @@
 % \newpage
 \section{Integration}
 \input{sections/analysis/integration.tex}
+
+\section{Infinite Series}
+\input{sections/analysis/series.tex}
