--- a/src/main.tex
+++ b/src/main.tex
@@ -41,7 +41,7 @@
     \chapter{Linear Algebra TODO}
     \input{sections/linear_algebra.tex}
             
-    \chapter{Statistics}
+    \chapter{Statistics DRAFT}
     \input{sections/statistics.tex}
 
     \chapter{Finance}
