--- a/src/sections/analysis/topology.tex
+++ b/src/sections/analysis/topology.tex
@@ -38,8 +38,11 @@ $\iff S = \overline S$.
 $S$ is \textbf{Clopen} $\iff$ $S$ is both Open and Closed. 
 The only Clopen sets are $\emptyset$ and $ \R$.
 
-If $S \neq \emptyset$, then $S$ is \textbf{Compact}
-$\iff$ every sequence in $S$ has a Convergent subsequence with it's limit in $S$.
+If $S \neq \emptyset$, then 
+(
+    $S$ is \textbf{Compact}
+    $\iff$ every sequence in $S$ has a Convergent subsequence with it's limit in $S$.    
+)
 
 \textbf{Bolzano–Weierstrass Theorem (BW):} \\
 If $S\subseteq \R$ is infinite and bounded, then $S' \neq \emptyset$. \\
