--- a/src/sections/statistics/continuous_markov_chain.tex
+++ b/src/sections/statistics/continuous_markov_chain.tex
@@ -28,7 +28,7 @@ $v_i$ is the \textbf{Rate of Transition}, where $v_i = \lim_{h\to 0} \frac{1-P_{
     P_{ij} = \frac{v_{ij}}{v_i} = \frac{v_{ij}}{\sum_j v_{ij}}
 \]
 
-Defined the matrix $\bm{R}$ such that 
+Defined the matrix $\bm{R}$ such that % Generator Matrix
 $\bm{r_{ij}} = \begin{cases}
     v_{ij} &\text{ for $i \neq j.$} \\
     -v_{j} &\text{ for $i = j.$}
