Notes on Groups
Fixed typo for analysis notes.

--- a/src/main.tex
+++ b/src/main.tex
@@ -29,6 +29,9 @@
 \begin{document}
     \maketitle
 
+    \chapter{Abstract Algebra} 
+    \input{sections/algebra.tex}
+
     \chapter{Real Analysis} 
     \input{sections/analysis.tex}
     
