--- a/src/packages.tex
+++ b/src/packages.tex
@@ -7,6 +7,7 @@
 \usepackage{listings} % For displaying code
 \usepackage{lplfitch} % Fitch-style proofs and Logic notations
 \usepackage{url} % for \url{} if not using hyperref
+\usepackage{microtype} % Better justification
 
 \usepackage{geometry} % Margins and stuff
 \usepackage{fancyhdr}
