--- a/src/sections/analysis.tex
+++ b/src/sections/analysis.tex
@@ -1,15 +1,15 @@
 \section{Sets, Relations and Functions TODO}
 % \input{sections/analysis/}
 
-\section{Sequence}
-\input{sections/analysis/sequence.tex}
+\section{Sequences}
+\input{sections/analysis/sequences.tex}
 
 % \newpage
 \section{Topology of the Real Line}
 \input{sections/analysis/topology.tex}
 
 % \newpage
-\section{Limit and Continuity}
+\section{Limits and Continuity}
 \input{sections/analysis/limits_and_continuity.tex}
 
 % \newpage
