--- a/src/sections/algebra/groups.tex
+++ b/src/sections/algebra/groups.tex
@@ -1,6 +1,6 @@
 % Let $S$ be a set. Suppose $a,b,c \in S$.
 
-A \textbf{Law of Composition/Binary Operation on} $S$
+A \textbf{Law of Composition/(Closed) Binary Operation on} $S$
 % maps any ordered pair of $S$ to some element is $S$. In other words, 
 is a function/map of the form
 $S \times S \to S$. \\
@@ -15,7 +15,7 @@ A Law of Composition on $S$ is
 \)
 
 The \textbf{Identity/Unity} of a Law of Composition is an element $\bm{e} \in S$,
-such that $\lall a \in S, ea = ae = e$.
+such that $\lall a \in S, ea = ae = a$.
 
 A element $a \in S$ is \textbf{Invertible} $\iff \lis b \in S, ab = ba = e$, 
 where $b$ is the inverse of $a$.
