--- a/src/sections/notations.tex
+++ b/src/sections/notations.tex
@@ -1,5 +1,7 @@
 $x \in [a,b]$ means $a \leq x \leq b$.
 
+For definitions: $:=$ means $=$.
+
 $x \in (a,b)$ means $a < x < b$.
 
 $\set{a \text{ such that } a = b} = \set{a | a = b} = \set{a : a = b}$.
