--- a/src/commands.tex
+++ b/src/commands.tex
@@ -66,6 +66,7 @@
 \newcommand*{\sub}{\textrm{sub}} % limits of all subsequences
 \newcommand*{\interior}{\textrm{int}}
 \newcommand*{\bd}{\textrm{bd}} % Boundary
+\newcommand*{\kernel}{\textrm{ker}} % Kernel
 
 \newcommand*{\curl}{\textrm{curl}} % Surface Integral
 \newcommand*{\divergence}{\textrm{div}} 
