--- a/src/main.tex
+++ b/src/main.tex
@@ -6,6 +6,7 @@
 
 \usepackage{hyperref} % Doesn't like math in section titles
 \newcommand{\smath}[2]{\texorpdfstring{#1}{#2}} % Use this to not break hyperref
+% \section[title in bookmark]{title} % also works
 
 \setcounter{secnumdepth}{-1} % Sets sectioning level for numbering 
 % -1 part     1 section     3 subsubsection  5 subparagraph
