Started Sequences of Functions notes

--- a/src/sections/analysis.tex
+++ b/src/sections/analysis.tex
@@ -22,3 +22,6 @@
 
 \section{Infinite Series}
 \input{sections/analysis/series.tex}
+
+\section{Sequences and Series of Functions}
+\input{sections/analysis/sequences_of_functions.tex}
