--- a/src/sections/algebra/groups.tex
+++ b/src/sections/algebra/groups.tex
@@ -59,5 +59,5 @@ Let $G, G'$ be groups.
 A \textbf{Homomorphism} $\bm{\phi}$ is a function from $G \to G'$,
 such that $\lall a,b \in G, \phi(ab) = \phi(a) \phi(b)$.
 
-The \textbf{Kernel} $\bm{\textbf{\kernel}\phi}$ of a Homomorphism is the set of all elements in $G$
+The \textbf{Kernel} $\bm{\textbf{\kernel}(\phi)}$ of a Homomorphism is the set of all elements in $G$
 such that $a \in G, \phi(a) = $ the identity in $G'$.
