Algebra notes and added References

--- a/src/main.tex
+++ b/src/main.tex
@@ -54,4 +54,29 @@
     \chapter{Notations and Tables TODO}
     \input{sections/notations.tex}
 
+    \chapter{References}
+    ``Algebra'' by Michael Artin. \\
+    (ISBN 13: 9780132413770)
+
+    ``Analysis I'' by Terence Tao. \\
+    (ISBN 13: 9789811017896)
+
+    ``Analysis II'' by Terence Tao. \\
+    (ISBN 13: 9789811018046)
+
+    ``Mathematical Statistics With Applications'' by
+    Dennis Wackerly, William Mendenhall, and Richard L. Scheaffer. \\
+    (ISBN 13: 9780495110811)
+
+    ``Introduction to Probability Models'' by
+    Sheldon M. Ross. \\
+    (ISBN 13: 9780123756862)
+
+    ``Mathematics for Finance: An Introduction to Financial Engineering'' by
+    Marek Capiński, and Tomasz Zastawniak. \\
+    (ISBN 13: 9781852333300)
+
+    Paul's Online Notes. \\
+    \url{http://tutorial.math.lamar.edu/}
+
 \end{document}
