--- a/src/sections/algebra/groups.tex
+++ b/src/sections/algebra/groups.tex
@@ -53,7 +53,6 @@ $\iff \lall h \in H, \lall g \in G, ghg^{-1} \in H$.
 
 
 
-
 Let $G, G'$ be groups.
 
 A \textbf{Homomorphism} $\bm{\phi}$ is a function from $G \to G'$,
@@ -61,3 +60,9 @@ such that $\lall a,b \in G, \phi(ab) = \phi(a) \phi(b)$.
 
 The \textbf{Kernel} $\bm{\textbf{\kernel}(\phi)}$ of a Homomorphism is the set of all elements in $G$
 such that $a \in G, \phi(a) = $ the identity in $G'$.
+
+An \textbf{Isomorphism} $\psi: G \to G'$ is a bijective group Homomorphism.
+
+A \textbf{Partition} $\Pi$ of a set $S$ is a subdivision of $S$ into nonoverlapping, nonempty subsets.
+
+A Partition is logically equivalent to an \textbf{Equivalence Relation} on $S$.
