--- a/src/commands.tex
+++ b/src/commands.tex
@@ -32,7 +32,7 @@
 \makeatother % https://tex.stackexchange.com/questions/235118/making-a-thicker-cdot-for-dot-product-that-is-thinner-than-bullet
 
 % Sets
-\newcommand*\set[1]{\{ #1 \}}
+\newcommand*\set[1]{\left\{ #1 \right\}}
 \let\intersection\cap
 \let\union\cup
 \let\bigintersection\bigcap
