Algebra Notes, Fixed Typo.

--- a/src/sections/algebra/groups.tex
+++ b/src/sections/algebra/groups.tex
@@ -73,7 +73,7 @@ A Partition is logically equivalent to an \textbf{Equivalence Relation} on $S$.
 \subsection{Cosets}
     Let $H$ be a subgroup of $G$, $a \in G$.\\
     $\bm{aH = \set{ah | h \in H}}$ is a \textbf{Left Coset}. \\
-    $\bm{Ha = \set{ah | h \in H}}$ is a \textbf{Right Coset}.
+    $\bm{Ha = \set{ha | h \in H}}$ is a \textbf{Right Coset}.
 
     All Left Cosets of a subgroup $H$ of $G$ have the same order,
     and form a Partition of $G$.
@@ -108,3 +108,7 @@ A Partition is logically equivalent to an \textbf{Equivalence Relation} on $S$.
 
     A permutation $p$ is \textbf{Even} $\iff \det(P) = 1$.\\
     A permutation $p$ is \textbf{Odd} $\iff \det(P) = -1$.
+
+    An \textbf{Alternating Group} $\bm{A_n}$ contains all even elements of $S_n$.
+
+    The order of $p$ is the smallest positive integer $k$ such that $p^k = 1$.
