--- a/src/sections/algebra/groups.tex
+++ b/src/sections/algebra/groups.tex
@@ -90,7 +90,7 @@ A Partition is logically equivalent to an \textbf{Equivalence Relation} on $S$.
 \subsection{Quotient Group}
     Let $C$ be the set of left cosets of a Normal subgroup $N$ of $G$.
 
-    A \textbf{Quotient Group} $\bm{G/N}$ is defined on $C$ with the law of operation: 
+    A \textbf{Quotient Group} $\bm{G/N}$ is defined on $C$ such that: 
     $\lall aN,bN \in G/N, (aN) (bN) = abN$.
 
 
