Analysis, Integration notes.

--- a/src/sections/analysis.tex
+++ b/src/sections/analysis.tex
@@ -22,3 +22,9 @@
 
 \section{Sequences and Series of Functions}
 \input{sections/analysis/sequences_of_functions.tex}
+
+\section[Differentiation in Rn]{Differentiation in $\bm{\R^n}$}
+\input{sections/analysis/differentiation_2.tex}
+
+\section[Integration in Rn]{Integration in $\bm{\R^n}$}
+\input{sections/analysis/integration_2.tex}
