--- a/src/main.tex
+++ b/src/main.tex
@@ -58,11 +58,18 @@
     ``Algebra'' by Michael Artin. \\
     (ISBN 13: 9780132413770)
 
+
+
     ``Analysis I'' by Terence Tao. \\
     (ISBN 13: 9789811017896)
 
     ``Analysis II'' by Terence Tao. \\
     (ISBN 13: 9789811018046)
+
+    ``Analysis on Manifolds'' by James R. Munkres. \\
+    (ISBN 13: 9780201510355)
+
+
 
     ``Mathematical Statistics With Applications'' by
     Dennis Wackerly, William Mendenhall, and Richard L. Scheaffer. \\
@@ -72,9 +79,13 @@
     Sheldon M. Ross. \\
     (ISBN 13: 9780123756862)
 
+
+
     ``Mathematics for Finance: An Introduction to Financial Engineering'' by
     Marek Capiński, and Tomasz Zastawniak. \\
     (ISBN 13: 9781852333300)
+
+    
 
     Paul's Online Notes. \\
     \url{http://tutorial.math.lamar.edu/}
