--- a/src/sections/algebra/groups.tex
+++ b/src/sections/algebra/groups.tex
@@ -46,7 +46,7 @@ A Partition is logically equivalent to an \textbf{Equivalence Relation} on $S$.
 
 \subsection{Subgroups}
     A Group $H$ is a \textbf{Subgroup of} a Group $G$
-    $\iff H \subseteq G \land \lall a,b \in H, ab \in H$ (\textbf{Closure}). \\
+    $\iff H \subseteq G \land \lall a,b \in H, ab^{-1} \in H$ (\textbf{Closure}). \\
     (Closure is a part of the definition of a Law of Composition.)
 
     Every Group $G$ has two trivial Subgroups: $G$ and $\set{e}$ (The trivial subgroups are also Normal).
