--- a/packages.tex
+++ b/packages.tex
@@ -1,4 +1,5 @@
-\usepackage{amsmath, amssymb, amsthm}
+\usepackage{amsmath, amssymb, amsthm, mathtools}
+\usepackage{dsfont}
 \usepackage{graphicx} % \dotp
 \usepackage{actuarialsymbol} % \actsymb[sub][sup]{}{sub}{sup}
 \usepackage{bm} % Bold text in math enviroment, \bm{}
